# tiny-kv

./: .gitignore  Cargo.toml  README.md  justfile
src/: client.rs  db.rs  file_ops.rs  lib.rs
tests/: users-ref.kv  users-ref.kvb
